--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.1.1",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "protractor": "^4.0.0",
+    "protractor-cucumber": "^0.1.8",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
