--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
