--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma": "^1.1.1",
     "karma-chrome-launcher": "^1.0.1",
     "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
     "protractor": "^4.0.0",
